kubernetes/applications/manifests/renovate/renovate-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renovate
  namespace: renovate
  labels:
    app: renovate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: renovate
  template:
    metadata:
      labels:
        app: renovate
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""

      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 192.0.2.10
          - 192.0.2.11

      securityContext:
        runAsUser: 0
        runAsGroup: 0

      containers:
        - name: renovate
          image: ghcr.io/mend/renovate-ce:14.5.0
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: renovate-logs
              mountPath: /logs
            - name: renovate-db
              mountPath: /db
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
      volumes:
        - name: renovate-logs
          persistentVolumeClaim:
            claimName: renovate-logs-pvc
        - name: renovate-db
          persistentVolumeClaim:
            claimName: renovate-db-pvc
